--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,7 @@
 		<a href="/Web/jsp/home">Arrancar JSP</a>
 	</p>
 	<p>
-		<a href="#">Arrancar JSF</a>
+		<a href="/Web/pages/jsf/home.xhtml">Arrancar JSF</a>
 	</p>
 </body>
 </html>
