--- a/src/main/webapp/pages/jsf/home.xhtml
+++ b/src/main/webapp/pages/jsf/home.xhtml
@@ -10,6 +10,7 @@
 	<ui:composition template="template/commonLayout.xhtml">
 		<ui:define name="content">
 		    <h1>Home Proyecto JEE_ECP Versión JSF</h1>
+		    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 			<p>
 				<p:link href="tema/incorporar.xhtml" value="#{msgs.incorporar_tema}"></p:link>
 			</p>
