--- a/src/main/webapp/pages/jsf/tema/incorporar.xhtml
+++ b/src/main/webapp/pages/jsf/tema/incorporar.xhtml
@@ -11,10 +11,12 @@
 		<ui:define name="content">
 			<p:breadCrumb>
 				<p:menuitem value="#{msgs.inicio}" url="/pages/jsf/home.xhtml" />
-				<p:menuitem value="#{msgs.incorporar_tema}" url="/pages/jsf/tema/incorporar.xhtml" />
+				<p:menuitem value="#{msgs.incorporar_tema}"
+					url="/pages/jsf/tema/incorporar.xhtml" />
 			</p:breadCrumb>
 			<h2>Incorporar nuevo tema</h2>
-			<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+			<p:messages id="messages" showDetail="true" autoUpdate="true"
+				closable="true" />
 			<h:form>
 				<h:panelGrid id="grid" columns="3" cellpadding="5">
 					<p:outputLabel for="categoria" value="#{msgs.categoria}: " />
