--- a/src/main/webapp/pages/jsf/tema/autorizar.xhtml
+++ b/src/main/webapp/pages/jsf/tema/autorizar.xhtml
@@ -19,7 +19,7 @@
 				<p:messages id="messages" showDetail="true" autoUpdate="true"
 					closable="true" />
 				<p:outputLabel for="codigo" value="#{msgs.ingrese_codigo}: " />
-				<p:inputText id="codigo" value="#{autorizarView.codigoSeguridad}"
+				<p:password id="codigo" value="#{autorizarView.codigoSeguridad}"
 					required="true" requiredMessage="#{msgs.requerido}" />
 				<p:message for="codigo" display="icon" />
 
