--- a/src/main/webapp/pages/jsf/tema/autorizar.xhtml
+++ b/src/main/webapp/pages/jsf/tema/autorizar.xhtml
@@ -24,8 +24,8 @@
 				<p:message for="codigo" display="icon" />
 
 				<p:commandButton id="btn_autorizar" process="@form"
-					update="messages" actionListener="#{autorizarView.verificar}"
-					action="#{autorizarView.autorizar}"
+					update="messages" actionListener="#{autorizarView.autorizar}"
+					action="#{autorizarView.verificar}"
 					value="#{msgs.enviar}" icon="ui-icon-refresh" />
 			</h:form>
 		</ui:define>
