--- a/src/main/webapp/pages/jsf/home.xhtml
+++ b/src/main/webapp/pages/jsf/home.xhtml
@@ -9,16 +9,16 @@
 
 	<ui:composition template="template/commonLayout.xhtml">
 		<ui:define name="content">
-		    <h1>Home Proyecto JEE_ECP Versión JSF</h1>
+		    <h1>#{msgs.home_jsf}</h1>
 		    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 			<p>
 				<p:link href="tema/incorporar.xhtml" value="#{msgs.incorporar_tema}"></p:link>
 			</p>
             <p>
-                <p:link href="tema/incorporar.xhtml" value="#{msgs.eliminar_tema}"></p:link>
+                <p:link href="tema/autorizar.xhtml" value="#{msgs.eliminar_tema}"></p:link>
             </p>
             <p>
-                <p:link href="tema/incorporar.xhtml" value="#{msgs.votar}"></p:link>
+                <p:link href="votacion/votar.xhtml" value="#{msgs.votar}"></p:link>
             </p>
             <p>
                 <p:link href="tema/incorporar.xhtml" value="#{msgs.ver_votaciones}"></p:link>
