--- a/src/main/webapp/pages/jsf/home.xhtml
+++ b/src/main/webapp/pages/jsf/home.xhtml
@@ -21,7 +21,7 @@
                 <p:link href="votacion/votar.xhtml" value="#{msgs.votar}"></p:link>
             </p>
             <p>
-                <p:link href="tema/incorporar.xhtml" value="#{msgs.ver_votaciones}"></p:link>
+                <p:link href="votacion/ver.xhtml" value="#{msgs.ver_votaciones}"></p:link>
             </p>
 		</ui:define>
 	</ui:composition>
