--- a/src/main/webapp/pages/jsf/votacion/ver.xhtml
+++ b/src/main/webapp/pages/jsf/votacion/ver.xhtml
@@ -26,7 +26,7 @@
 					<h:outputText value="#{temaValoracionMedia.tema.categoria}" />
 					<h:outputText value=" - " />
 					<h:outputText value="#{temaValoracionMedia.numeroVotos}" />
-					<h:outputText value=" votos " />
+					<h:outputText value=" #{msgs.votos} " />
 
 					<p:dataTable var="valoracionMedia"
 						value="#{temaValoracionMedia.valoracionMedia}"
