--- a/src/main/webapp/pages/jsf/home.xhtml
+++ b/src/main/webapp/pages/jsf/home.xhtml
@@ -23,6 +23,9 @@
             <p>
                 <p:link href="votacion/ver.xhtml" value="#{msgs.ver_votaciones}"></p:link>
             </p>
+            <p>
+                <p:link href="../../index.html" value="#{msgs.volver_inicio}"></p:link>
+            </p>            
 		</ui:define>
 	</ui:composition>
 
